--- a/app/views/devise/registrations/new.slim
+++ b/app/views/devise/registrations/new.slim
@@ -1,6 +1,12 @@
 h2 Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "devise/shared/error_messages", resource: resource
+  
+  .field
+    = f.label :username
+    br
+    = f.text_field :username, autofocus: true, autocomplete: "username"
+  
   .field
     = f.label :email
     br
@@ -28,6 +34,14 @@ h2 Sign up
     br
     = f.password_field :password_confirmation, autocomplete: "new-password"
   
+  .field
+    = f.label :user_security_question
+    = f.select :user_security_question_id, UserSecurityQuestion.all.map{|q| [q.title, q.id] }
+ 
+  .field
+    = f.label :security_question_answer
+    = f.text_field :security_question_answer
+    
   .actions
     = f.submit "Sign up"
 = render "devise/shared/links"
