--- a/app/views/devise/registrations/edit.slim
+++ b/app/views/devise/registrations/edit.slim
@@ -43,6 +43,10 @@ h2 Edit #{resource_name.to_s.humanize}
     = f.label :security_question_answer
     = f.text_field :security_question_answer
     
+  .field
+    = f.label :country
+    = f.select :country_id, Country.all.map{ |q| [q.title, q.id] }
+    
   .actions
     = f.submit "Update"
   
