--- a/app/views/devise/registrations/new.slim
+++ b/app/views/devise/registrations/new.slim
@@ -42,6 +42,10 @@ h2 Sign up
     = f.label :security_question_answer
     = f.text_field :security_question_answer
     
+  .field
+    = f.label :country
+    = f.select :country_id, Country.all.map{ |q| [q.title, q.id] }
+    
   .actions
     = f.submit "Sign up"
 = render "devise/shared/links"
