Add default NavBar, add Roboto font to project

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -1,10 +1,40 @@
 /**************************************
+* Variables:
+**************************************/
+$color-blue: #3F51B5;
+$color-light-blue: #D4D7ED;
+$color-black: #000000;
+$color-red: #DA100B;
+$color-grey: #DCDCDC;
+
+/**************************************
+* Custom bootstrab elements:
+**************************************/
+$primary: $color-blue;
+$danger: $color-red;
+@import 'navigation_bar.scss';
+
+/**************************************
 * Import stylesheets from node modules:
 **************************************/
 @import '~bootstrap/scss/bootstrap'; // Custom bootstrap variables must be set or imported *before* bootstrap.
 
+/**************************************
+* Internal fonts:
+**************************************/
+@import 'fonts';
+
+/**************************************
+* Internal styles:
+**************************************/
+
+
 html, body {
+  max-width: 1440px;
   height: 100%;
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 8px 100px;
+  border: 1px solid green;
+  font-family: 'roboto';
+  font-weight: 400; // 900, 700, 500, 400, 300
 }
