--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -9,7 +9,7 @@ html
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_pack_tag 'application'
-    = javascript_pack_tag 'application'
+    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     
   body
     nav.navbar.navbar-expand-lg.navbar-light
@@ -34,7 +34,9 @@ html
             a.nav-link href="#" Video
             
         .div
-          button.btn.btn-link.my-2.my-sm-0 Sign Up
-          button.btn.btn-primary.my-2.my-sm-0 Sign In
-          
+          = link_to "Sign Up", '', class: 'btn btn-link my-2 my-sm-0'
+          = link_to "Sign In", '', class: 'btn btn-primary my-2 my-sm-0', data: { toggle: "modal", target: ".bd-example-modal-lg" }
+          // = link_to "Logout", destroy_user_session_path, method: :delete, class: 'btn btn-link my-2 my-sm-0'
     = yield
+    
+    = render 'shared/login_form'
