Update API endpoints, add view for Sign In

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -34,9 +34,11 @@ html
             a.nav-link href="#" Video
             
         .div
-          = link_to "Sign Up", '', class: 'btn btn-link my-2 my-sm-0'
-          = link_to "Sign In", '', class: 'btn btn-primary my-2 my-sm-0', data: { toggle: "modal", target: ".bd-example-modal-lg" }
-          // = link_to "Logout", destroy_user_session_path, method: :delete, class: 'btn btn-link my-2 my-sm-0'
+          - if current_user
+            = link_to "Logout", destroy_user_session_path, method: :delete, class: 'btn btn-link my-2 my-sm-0'
+          - else
+            = link_to "Sign Up", '', class: 'btn btn-link my-2 my-sm-0'
+            = link_to "Sign In", '', class: 'btn btn-primary my-2 my-sm-0', data: { toggle: "modal", target: ".sign-in-modal-lg" }
     = yield
     
-    = render 'shared/login_form'
+    = render 'shared/sign_in'
