--- a/app/views/shared/_sign_up.slim
+++ b/app/views/shared/_sign_up.slim
@@ -10,7 +10,7 @@
           = image_pack_tag('media/images/icons/ic_close.png')
       .modal-body
         .global-errors
-        = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = form_for(resource, as: resource_name, url: registration_path(resource_name), remote: true, namespace: 'sign_up') do |f|
           = render "devise/shared/error_messages", resource: resource
           
           .row
@@ -37,7 +37,7 @@
             
           .material-field.dropdown
             = f.label 'Country'
-            = f.select :country_id, Country.all.map{ |q| [q.title, q.code] }, {}, { class: 'form-control select2' }
+            = f.select :country_id, Country.all.map{ |q| [q.title, q.id, {'title': q.code}] }
           
           .material-field.dropdown
             = f.label 'Select a Question'
@@ -54,7 +54,7 @@
                 | I have read and agree to Screade's #{link_to 'Terms and services', ''}
             
           .actions
-            = f.submit 'Next', class: 'btn btn-primary w-100'
+            = f.submit 'Next', class: 'btn btn-primary w-100', id: 'sign-up-submit-button', disabled: true
               
       .modal-footer
           p.m-auto
