Add second step for Sign Up form

--- a/app/views/shared/_sign_in.slim
+++ b/app/views/shared/_sign_in.slim
@@ -36,5 +36,5 @@
       .modal-footer
           p.m-auto
             span.mx-2 If you don't have an account?
-            = link_to 'Sign up', new_registration_path(resource_name)
+            = link_to 'Sign up', '', data: { toggle: "modal", target: ".sign-up-modal-lg" }
             
