--- a/app/views/shared/_sign_up.slim
+++ b/app/views/shared/_sign_up.slim
@@ -51,7 +51,7 @@
             .form-check
               input#term-and-services-agreement.form-check-input type="checkbox" /
               label.form-check-label for="term-and-services-agreement"
-                | I have read and agree to Screade's #{link_to 'Terms and services', ''}
+                | I have read and agree to Screade's #{link_to 'Terms and services', '', :target => "_blank" }
             
           .actions
             = f.submit 'Next', class: 'btn btn-primary w-100', id: 'sign-up-submit-button', disabled: true
@@ -59,5 +59,5 @@
       .modal-footer
           p.m-auto
             span.mx-2 Already have an account?
-            = link_to 'Login', ''
+            = link_to 'Login', '', data: { toggle: "modal", target: ".sign-in-modal-lg" }
             
