--- a/app/webpack/stylesheets/modale.scss
+++ b/app/webpack/stylesheets/modale.scss
@@ -103,7 +103,7 @@ span.flag-text  { margin-left: 10px !important; }
 
 // Modal Footer
 .modal-content .modal-footer {
-  padding-top: 12px;
+  padding: 24px;
   border-top: none;
 }
 
@@ -112,7 +112,7 @@ span.flag-text  { margin-left: 10px !important; }
   font-size: 14px;
  }
  
-.modal .actions { padding: 16px 0px; }
+.modal .actions { padding: 16px 0px 0px 0px; }
 
 // Errors
 .modal-content .global-errors { color: $color-red; }
