Add Forgot password modal

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -44,3 +44,4 @@ html
     = render 'shared/sign_in'
     = render 'shared/sign_up'
     = render 'shared/sign_up_update'
+    = render 'shared/forgot_password'
