Add images upload for second step in SignUp

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -15,7 +15,7 @@ $primary: $color-blue;
 $danger: $color-red;
 
 @import 'navigation_bar';
-@import 'modale';
+@import 'modal';
 
 /**************************************
 * Import stylesheets from node modules:
