--- a/app/views/shared/_sign_up_update.slim
+++ b/app/views/shared/_sign_up_update.slim
@@ -11,6 +11,18 @@
       .modal-body
         .global-errors
         = form_for resource, url: current_user_index_path(), namespace: 'sign_up_update', method: :put do |f|
+          
+          = f.file_field :banner_picture, accept: 'image/png, image/jpeg'
+          .banner-image-mask
+            img#banner-image src=''
+            = image_pack_tag 'media/images/icons/ic_add_banner.png', class: 'icon-add-banner', id: 'icon-add-banner'
+              
+          .profile-wrapper
+            = f.file_field :profile_picture, accept: 'image/png, image/jpeg'
+            .profile-image-mask
+              img#profile-image src=''
+              = image_pack_tag 'media/images/icons/btn_add_photo.png', class: 'icon-add-profile', id: 'icon-add-profile'
+            
           .row
             .col
               .material-field
