Update project Grey color

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -5,7 +5,7 @@ $color-blue: #3F51B5;
 $color-light-blue: #D4D7ED;
 $color-black: #000000;
 $color-red: #DA100B;
-$color-grey: #DCDCDC;
+$color-grey: #9C9C9C;
 $color-white: #FFFFFF;
 
 /**************************************
