Set phone field only for nubmers

--- a/app/views/shared/_sign_up_update.slim
+++ b/app/views/shared/_sign_up_update.slim
@@ -43,7 +43,7 @@
             .col
               .material-field
                 = f.label 'Phone number'
-                = f.text_field :phone_number, class: 'form-control'
+                = f.text_field :phone_number, class: 'form-control', type: 'number'
             
           .material-field
             = f.label 'Date of Birth'
