Make all modals scrole verticaly forcibly

--- a/app/views/shared/_sign_up.slim
+++ b/app/views/shared/_sign_up.slim
@@ -1,4 +1,4 @@
-.modal.fade.sign-up-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
+.modal.fade.sign-up-modal-lg.overflow-auto aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
   .modal-dialog.modal-dialog-centered.modal-lg
     .modal-content
       .modal-header
