--- a/app/views/shared/_forgot_password.slim
+++ b/app/views/shared/_forgot_password.slim
@@ -1,4 +1,4 @@
-.modal.fade.forgot-password-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
+.modal.fade.forgot-password-modal-lg.overflow-auto aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
   .modal-dialog.modal-dialog-centered.modal-lg
     .modal-content
       .modal-header
