--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -19,7 +19,7 @@ html
       #navbarSupportedContent.collapse.navbar-collapse
         ul.navbar-nav.mr-auto
           li.nav-item.active
-            a.nav-link href="#" Home
+            = link_to 'Home', root_path, class: 'nav-link'
           li.nav-item
             a.nav-link href="#" Groups
           li.nav-item
