Update modal forms

--- a/app/views/devise/passwords/create.js.erb
+++ b/app/views/devise/passwords/create.js.erb
@@ -1,7 +1,7 @@
 <%- if resource.errors.present? %>
-  $('.modal.forgot-password-modal-lg .global-errors').html("Incorrect Email/Question/Answer")
+  $('#modal-forgot-password .global-errors').html("Incorrect Email/Question/Answer")
 <% else %>
-  let form = $('.modal.forgot-password-modal-lg form')
+  let form = $('#modal-forgot-password form')
   form.hide()
   form.after('<div class="global-success">We have sent recovery instructions to your email.<div>')
 <% end %>
