--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -37,11 +37,11 @@ html
           - if current_user
             = link_to "Logout", destroy_user_session_path, method: :delete, class: 'btn btn-link my-2 my-sm-0'
           - else
-            = link_to "Sign Up", '', class: 'btn btn-link my-2 my-sm-0', data: { toggle: "modal", target: ".sign-up-modal-lg" }
-            = link_to "Sign In", '', class: 'btn btn-primary my-2 my-sm-0', data: { toggle: "modal", target: ".sign-in-modal-lg" }
+            = link_to "Sign Up", '', class: 'btn btn-link my-2 my-sm-0', data: { toggle: "modal", target: "#modal-sign-up" }
+            = link_to "Sign In", '', class: 'btn btn-primary my-2 my-sm-0', data: { toggle: "modal", target: "#modal-sign-in" }
     = yield
     
-    = render 'shared/sign_in'
-    = render 'shared/sign_up'
-    = render 'shared/sign_up_update'
-    = render 'shared/forgot_password'
+    = render 'shared/modals/sign_in'
+    = render 'shared/modals/sign_up'
+    = render 'shared/modals/sign_up_update'
+    = render 'shared/modals/forgot_password'
