--- a/app/views/devise/registrations/create.js.erb
+++ b/app/views/devise/registrations/create.js.erb
@@ -5,5 +5,5 @@ $('.modal .local-errors').remove()
     $("#sign_up_user_<%= error.attribute %>").parent().append("<div class='local-errors'><span><%= error.message %></span></div>")
   <% end %>
 <% else %>
-  $('.sign-up-update-modal-lg').modal('show')
+  $('#modal-sign-up-update').modal('show')
 <% end %>
