--- a/app/views/shared/modals/_forgot_password.slim
+++ b/app/views/shared/modals/_forgot_password.slim
@@ -1,10 +1,11 @@
-.modal.fade.forgot-password-modal-lg.overflow-auto aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
+.modal.fade.overflow-auto#modal-forgot-password aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
   .modal-dialog.modal-dialog-centered.modal-lg
     .modal-content
       .modal-header
         h4.modal-title Forgot your password?
         button.close aria-label="Close" data-dismiss="modal" type="button"
           = image_pack_tag('media/images/icons/ic_close.png')
+          
       .modal-body
         .global-errors
         = form_for(resource, as: resource_name, url: password_path(resource_name), namespace: 'forgot_password', html: { method: :post }, remote: true) do |f|
