--- a/app/views/shared/modals/_sign_in.slim
+++ b/app/views/shared/modals/_sign_in.slim
@@ -1,10 +1,11 @@
-.modal.fade.sign-in-modal-lg.overflow-auto aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
+.modal.fade.overflow-auto#modal-sign-in aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
   .modal-dialog.modal-dialog-centered.modal-lg
     .modal-content
       .modal-header
         h4.modal-title Sign In
         button.close aria-label="Close" data-dismiss="modal" type="button"
           = image_pack_tag('media/images/icons/ic_close.png')
+          
       .modal-body
         .global-errors
         = form_for(resource, as: resource_name, url: session_path(resource_name), remote: true, namespace: 'sign_in') do |f|
@@ -28,7 +29,7 @@
                 = image_pack_tag('media/images/icons/ic_show_password.png', class: 'img-responsive', id: 'show-password-icon')
           
           .actions.text-right
-            = link_to 'Forgot password', '', data: { toggle: "modal", target: ".forgot-password-modal-lg" }
+            = link_to 'Forgot password', '', data: { toggle: "modal", target: "#modal-forgot-password" }
             
           .actions
             = f.submit 'Sign In', class: 'btn btn-primary w-100'
@@ -36,5 +37,5 @@
       .modal-footer
           p.m-auto
             span.mx-2 If you don't have an account?
-            = link_to 'Sign up', '', data: { toggle: "modal", target: ".sign-up-modal-lg" }
+            = link_to 'Sign up', '', data: { toggle: "modal", target: "#modal-sign-up" }
             
