--- a/app/views/shared/modals/_sign_up_update.slim
+++ b/app/views/shared/modals/_sign_up_update.slim
@@ -1,4 +1,4 @@
-.modal.fade.sign-up-update-modal-lg.overflow-auto aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
+.modal.fade.overflow-auto#modal-sign-up-update aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
   .modal-dialog.modal-dialog-centered.modal-lg
     .modal-content
       .modal-header
@@ -8,6 +8,7 @@
           .step
         button.close aria-label="Close" data-dismiss="modal" type="button"
           = image_pack_tag('media/images/icons/ic_close.png')
+          
       .modal-body
         .global-errors
         = form_for resource, url: current_user_index_path(), namespace: 'sign_up_update', method: :put do |f|
@@ -33,7 +34,7 @@
               .material-field
                 = f.label 'Middle Name'
                 = f.text_field :middle_name, class: 'form-control'
-            
+                
           .row
             .col
               .material-field
