--- a/app/views/devise/passwords/edit.slim
+++ b/app/views/devise/passwords/edit.slim
@@ -1,24 +1,17 @@
-h2 Change your password
-  
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  = f.hidden_field :reset_password_token
-  
-  .field
-    = f.label :password, "New password"
-    br
-    - if @minimum_password_length
-      em #{@minimum_password_length} characters minimum
-      br
+.w-75.my-5.mx-auto
+  h5 Change your password
+
+  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+    = render "devise/shared/error_messages", resource: resource
+    = f.hidden_field :reset_password_token
     
-    = f.password_field :password, autofocus: true, autocomplete: "new-password"
-    
-  .field
-    = f.label :password_confirmation, "Confirm new password"
-    br
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-    
-  .actions
-    = f.submit "Change my password"
-    
-= render "devise/shared/links"
+    .material-field
+      = f.label 'New password'
+      = f.password_field :password, class: 'form-control'
+      
+    .material-field
+      = f.label 'Repeat new password'
+      = f.password_field :password_confirmation, class: 'form-control'
+      
+    .actions
+      = f.submit "Change my password", class: 'btn btn-primary w-100'
