--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -14,6 +14,13 @@
   &.dropdown { margin: 0 0 24px 0; }
 }
 
+form .form-control {
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid $color-grey;
+  padding: 0.375rem 0.7rem;
+}
+
 // Input placeholder color and size Chrome, Firefox, Opera, Safari 10.1+
 .form-control::placeholder {
   font-size: 14px;
