Rename Login, Logout to SignIn SignOut

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -35,7 +35,7 @@ html
             
         .div
           - if current_user
-            = link_to "Logout", destroy_user_session_path, method: :delete, class: 'btn btn-link my-2 my-sm-0'
+            = link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-link my-2 my-sm-0'
           - else
             = link_to "Sign Up", '', class: 'btn btn-link my-2 my-sm-0', data: { toggle: "modal", target: "#modal-sign-up" }
             = link_to "Sign In", '', class: 'btn btn-primary my-2 my-sm-0', data: { toggle: "modal", target: "#modal-sign-in" }
