--- a/app/views/shared/modals/_sign_up.slim
+++ b/app/views/shared/modals/_sign_up.slim
@@ -58,5 +58,5 @@
       .modal-footer
           p.m-auto
             span.mx-2 Already have an account?
-            = link_to 'Login', '', data: { toggle: "modal", target: "#modal-sign-in" }
+            = link_to 'Sign In', '', data: { toggle: "modal", target: "#modal-sign-in" }
             
