--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -26,6 +26,7 @@ $grid-breakpoints: (
 @import 'navigation_bar';
 @import 'custom_fields';
 @import './modals/index';
+@import '/home/index';
 
 /**************************************
 * Import stylesheets from node modules:
