--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -19,7 +19,7 @@ $grid-breakpoints: (
   xs: 0,
   sm: 576px,
   md: 768px,
-  lg: 1350px,
+  lg: 1174px,
   xl: 1200px
 );
 
@@ -45,10 +45,21 @@ html, body {
   max-width: 1440px;
   height: 100%;
   margin: 0 auto;
-  padding: 8px 100px;
+  padding: 8px 50px;
   //border: 1px solid green;
   font-family: 'roboto';
   font-weight: 400; // 900, 700, 500, 400, 300
+}
+
+// Prevent text from selection
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 @media (max-width: 960px) {
