--- a/app/webpack/stylesheets/home/breaking_news.scss
+++ b/app/webpack/stylesheets/home/breaking_news.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   padding: 0;
-  margin: 0;
+  margin: 8px 0px;
   width: 100%;
   height: 36px;
   border: 1px solid $color-red;
