Add News to Home page

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -1,3 +1,4 @@
 = render './shared/panels/news_categories', news_categories: @news_categories
 = render 'breaking_news'
 = render 'trends'
+= render 'news'
