--- a/app/webpack/stylesheets/home/trends.scss
+++ b/app/webpack/stylesheets/home/trends.scss
@@ -1,4 +1,4 @@
-.trends-wraper {
+.trends-wrapper {
   margin: 24px 0px;
   overflow-x: hidden;
 }
@@ -26,13 +26,13 @@
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.12);
 }
 
-.trends-wraper img.trend-image {
+.trends-wrapper img.trend-image {
   width: 40px;
   height: 40px;
   margin: 8px;
 }
 
-.trends-wraper p {
+.trends-wrapper p {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
