--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -25,6 +25,7 @@ $grid-breakpoints: (
 
 @import 'navigation_bar';
 @import 'custom_fields';
+@import 'toggle-switcher';
 @import './modals/index';
 @import '/home/index';
 
