--- a/app/views/home/_trends.slim
+++ b/app/views/home/_trends.slim
@@ -2,28 +2,12 @@
   h4 Trends
   
   .trend-card-wrapper.noselect
-    = link_to '', class: 'trend-card' do
-      = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'trend-image')
-      p A lot of text for example in this card
-      
-    = link_to '', class: 'trend-card' do
-      = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'trend-image')
-      p A lot of text for example in this card
-      
-    = link_to '', class: 'trend-card' do
-      = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'trend-image')
-      p A lot of text for example in this card
-      
-    = link_to '', class: 'trend-card' do
-      = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'trend-image')
-      p A lot of text for example in this card
-      
-    = link_to '', class: 'trend-card' do
-      = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'trend-image')
-      p A lot of text for example in this card
-      
-    = link_to '', class: 'trend-card' do
-      = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'trend-image')
-      p A lot of text for example in this card
-          
-  
+    - trends.each do |trend|
+      = link_to trend[:url], class: 'trend-card', target: '_blank' do
+        .trend-image-wrapper
+          - if trend[:img_url].present?
+            = image_tag(trend[:img_url], class: 'trend-image')
+          - else
+            = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'trend-image')
+        p
+          = trend[:title]
