--- a/app/webpack/stylesheets/home/trends.scss
+++ b/app/webpack/stylesheets/home/trends.scss
@@ -4,6 +4,7 @@
 }
 
 .trend-card-wrapper {
+  display: block;
   overflow: auto;
   white-space: nowrap;
 }
@@ -26,10 +27,22 @@
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.12);
 }
 
-.trends-wrapper img.trend-image {
-  width: 40px;
-  height: 40px;
+.trends-wrapper .trend-image-wrapper {
+  display: flex;
+  justify-content: center;
+  background-color: green;
+  position: relative;
+  max-width: 40px;
+  min-width: 40px;;
+  border-radius: 50%;
   margin: 8px;
+  overflow: hidden
+}
+
+.trends-wrapper img.trend-image {
+  width: auto;
+  height: 40px;
+  margin:auto;
 }
 
 .trends-wrapper p {
