--- a/app/webpack/stylesheets/home/news.scss
+++ b/app/webpack/stylesheets/home/news.scss
@@ -11,23 +11,24 @@
 
 .news-cards-wrapper .news-card {
   display: inline-block;
-  align-items: center;
+  vertical-align: top;
   margin-right: 16px;
   margin-bottom: 16px;
   align-items: center;
   width: calc(100% * (1/4) - 12px);
+  min-height: 230px;
 }
 
 .news-cards-wrapper .news-image-wrapper {
   width: 100%;
-  max-height: 167px;
+  height: 167px;
+  object-fit: cover;
   text-align: center;
   overflow: hidden
 }
 
 .news-cards-wrapper img.news-image {
-  max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .news-cards-wrapper p.news-title {
