--- a/app/webpack/stylesheets/home/news.scss
+++ b/app/webpack/stylesheets/home/news.scss
@@ -20,15 +20,19 @@
 }
 
 .news-cards-wrapper .news-image-wrapper {
+  position: relative;
   width: 100%;
   height: 167px;
   object-fit: cover;
   text-align: center;
-  overflow: hidden
+  overflow: hidden;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
 .news-cards-wrapper img.news-image {
+  width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .news-cards-wrapper p.news-title {
