Add AdSense to project

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -11,6 +11,9 @@ html
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     
+    // AddSense
+    script async="" data-ad-client="ca-pub-6870429523010770" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    
   body
     nav.navbar.navbar-expand-lg.navbar-light
       = image_pack_tag('media/images/screade-logo-main.png', id: 'navbar-logo')
