Show banner place in test mode

--- a/app/views/shared/ads/_home_banner.html.erb
+++ b/app/views/shared/ads/_home_banner.html.erb
@@ -1,7 +1,8 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Home page ads -->
 <ins class="adsbygoogle"
-     style="display:block"
+     google_adtest = on;
+     style="display:block; background-color: #D4D4D4"
      data-ad-client="ca-pub-6870429523010770"
      data-ad-slot="4256272140"
      data-ad-format="auto"
