--- a/app/webpack/stylesheets/icons.scss
+++ b/app/webpack/stylesheets/icons.scss
@@ -24,6 +24,11 @@
   font-weight: 500;
 }
 
+// Link block for info-panel
+.info-panel .comment-link-icon {
+  line-height: 1;
+}
+
 // Icons
 i.ic {
   height: 20px;
